--- a/index.html
+++ b/index.html
@@ -39,63 +39,103 @@
 
 	<!-- Main content -->
 	<div id="main" class="container-fluid px-0">
+
 		<!-- Landing section -->
-		<div id="landing" class="min-vh-50">
-			<div id="fg-landing" class="min-vh-50">
+			<div id="landing" class="min-vh-50">
+				<div id="fg-landing" class="min-vh-50">
+
+				</div>
 
 			</div>
 
-		</div>
-
-		<div id="aboutme" class="text-white mt-5">
-			<h3 class="">About Me</h3>
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. In gravida diam eget viverra venenatis. Vivamus semper sem eget mollis ultricies. Cras turpis lectus, sodales interdum luctus quis, gravida id erat. Phasellus aliquam condimentum commodo. Sed non magna finibus, vestibulum diam.
-			</p>
-		</div>
+			<div id="aboutme" class="text-white mt-5">
+				<h3 class="">About Me</h3>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. In gravida diam eget viverra venenatis. Vivamus semper sem eget mollis ultricies. Cras turpis lectus, sodales interdum luctus quis, gravida id erat. Phasellus aliquam condimentum commodo. Sed non magna finibus, vestibulum diam.
+				</p>
+			</div>
 		<!-- End Landing section -->
 
 		<!-- Projects Section -->
-		<div class="row px-3 text-white">
-			<h2 class="col-12">Projects</h2>
-			<!-- https://place-puppy.com/500x300 -->
-			<div class="project-group col-12 col-md-6">
-				<div class="card border-0" >
-					<img src="https://place-puppy.com/500x300" class="card-img-top" alt="...">
-					<div class="card-body">
-						<h5 class="card-title text-dark text-center">Project Name 1</h5>
+			<div id="projects" class="row px-3 text-white">
+				<h2 class="col-12 text-lg-center">Projects</h2>
+				<!-- https://place-puppy.com/500x300 -->
+				<div class="project-group col-12 col-md-6 col-lg-4 offset-lg-1">
+					<div class="card border-0" >
+						<img src="https://place-puppy.com/500x300" class="card-img-top" alt="...">
+						<div class="card-body">
+							<h5 class="card-title text-dark text-center">Project Name 1</h5>
+						</div>
+					</div>
+					<div class="project-description px-5 pt-1">
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien risus, cursus nec ante vel, rhoncus elementum lorem. Maecenas porttitor, velit et hendrerit pharetra, quam purus sollicitudin nisl, vitae blandit.</p>
 					</div>
 				</div>
-				<div class="project-description px-5 pt-1">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien risus, cursus nec ante vel, rhoncus elementum lorem. Maecenas porttitor, velit et hendrerit pharetra, quam purus sollicitudin nisl, vitae blandit.</p>
-				</div>
-			</div>
 
-			<div class="project-group col-12 col-md-6">
-				<div class="card border-0" >
-					<img src="https://placekitten.com/500/300" class="card-img-top" alt="...">
-					<div class="card-body">
-						<h5 class="card-title text-dark text-center">Project Name 2</h5>
+				<div class="project-group col-12 col-md-6 col-lg-4 offset-lg-1">
+					<div class="card border-0" >
+						<img src="https://placekitten.com/500/300" class="card-img-top" alt="...">
+						<div class="card-body">
+							<h5 class="card-title text-dark text-center">Project Name 2</h5>
+						</div>
+					</div>
+					<div class="project-description px-5 pt-1">
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien risus, cursus nec ante vel, rhoncus elementum lorem. Maecenas porttitor, velit et hendrerit pharetra, quam purus sollicitudin nisl, vitae blandit.</p>
 					</div>
 				</div>
-				<div class="project-description px-5 pt-1">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien risus, cursus nec ante vel, rhoncus elementum lorem. Maecenas porttitor, velit et hendrerit pharetra, quam purus sollicitudin nisl, vitae blandit.</p>
-				</div>
-			</div>
 
-			<div class="project-group col-12 col-md-6">
-				<div class="card border-0" >
-					<img src="https://place-puppy.com/450x450" class="card-img-top" alt="...">
-					<div class="card-body">
-						<h5 class="card-title text-dark text-center">Project Name 3</h5>
+				<div class="project-group col-12 col-md-6 col-lg-4 offset-lg-1">
+					<div class="card border-0" >
+						<img src="https://place-puppy.com/450x450" class="card-img-top" alt="...">
+						<div class="card-body">
+							<h5 class="card-title text-dark text-center">Project Name 3</h5>
+						</div>
+					</div>
+					<div class="project-description px-5 pt-1">
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien risus, cursus nec ante vel, rhoncus elementum lorem. Maecenas porttitor, velit et hendrerit pharetra, quam purus sollicitudin nisl, vitae blandit.</p>
 					</div>
 				</div>
-				<div class="project-description px-5 pt-1">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien risus, cursus nec ante vel, rhoncus elementum lorem. Maecenas porttitor, velit et hendrerit pharetra, quam purus sollicitudin nisl, vitae blandit.</p>
+
+				<div class="project-group col-12 col-md-6 col-lg-4 offset-lg-1">
+					<div class="card border-0" >
+						<img src="https://placekitten.com/450/450" class="card-img-top" alt="...">
+						<div class="card-body">
+							<h5 class="card-title text-dark text-center">Project Name 4</h5>
+						</div>
+					</div>
+					<div class="project-description px-5 pt-1">
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien risus, cursus nec ante vel, rhoncus elementum lorem. Maecenas porttitor, velit et hendrerit pharetra, quam purus sollicitudin nisl, vitae blandit.</p>
+					</div>
 				</div>
 			</div>
-		</div>
 		<!-- End Projects Section -->
+
+		<!-- Tools Section -->
+			<div  class="row text-white min-vh-100" id="tools">
+				<div class="col-12">
+					<h3 class="">Core Tools</h3>
+					<img src="images/logo-html5.png"/>
+                    <img src="images/logo-css3.png"/>   
+                    <img src="images/logo-javascript.png"/>
+				</div>
+				<div class="col-12">
+					<h3 class="">Database</h3>
+                    <img src="images/logo-mongodb.png"/>
+				</div>
+				<div class="col-12">
+					<h3 class="">Version Control and Collaboration</h3>
+                    <img src="images/logo-git.png"/>
+                    <img src="images/logo-gitlab-ci-cd.png"/>
+                    <img src="images/logo-github.png"/>
+				</div>
+				<div class="col-12">
+					<h3 class="">Servers and Deployment</h3>
+                    <img src="images/logo-mongodb.png"/>
+                    <img src="images/logo-heroku.png"/>
+				</div>
+
+			</div>
+		<!-- End Tools Section -->
 	</div>
 
 	<!-- End Main content -->
