add more subheadings in Tools Section

--- a/index.html
+++ b/index.html
@@ -38,104 +38,130 @@
 	<!-- End Navbar -->
 
 	<!-- Main content -->
-	<div id="main" class="container-fluid px-0">
+	<div id="main" class="container-fluid">
 
 		<!-- Landing section -->
-			<div id="landing" class="min-vh-50">
-				<div id="fg-landing" class="min-vh-50">
-
-				</div>
+		<div id="landing" class="min-vh-50">
+			<div id="fg-landing" class="min-vh-50">
 
 			</div>
 
-			<div id="aboutme" class="text-white mt-5">
-				<h3 class="">About Me</h3>
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. In gravida diam eget viverra venenatis. Vivamus semper sem eget mollis ultricies. Cras turpis lectus, sodales interdum luctus quis, gravida id erat. Phasellus aliquam condimentum commodo. Sed non magna finibus, vestibulum diam.
-				</p>
-			</div>
+		</div>
+
+		<div id="aboutme" class="text-white mt-5">
+			<h3 class="">About Me</h3>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. In gravida diam eget viverra venenatis. Vivamus semper sem eget mollis ultricies. Cras turpis lectus, sodales interdum luctus quis, gravida id erat. Phasellus aliquam condimentum commodo. Sed non magna finibus, vestibulum diam.
+			</p>
+		</div>
 		<!-- End Landing section -->
 
 		<!-- Projects Section -->
-			<div id="projects" class="row px-3 text-white">
-				<h2 class="col-12 text-lg-center">Projects</h2>
-				<!-- https://place-puppy.com/500x300 -->
-				<div class="project-group col-12 col-md-6 col-lg-4 offset-lg-1">
-					<div class="card border-0" >
-						<img src="https://place-puppy.com/500x300" class="card-img-top" alt="...">
-						<div class="card-body">
-							<h5 class="card-title text-dark text-center">Project Name 1</h5>
-						</div>
-					</div>
-					<div class="project-description px-5 pt-1">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien risus, cursus nec ante vel, rhoncus elementum lorem. Maecenas porttitor, velit et hendrerit pharetra, quam purus sollicitudin nisl, vitae blandit.</p>
+		<div id="projects" class="row px-3 text-white">
+			<h2 class="col-12 text-lg-center">Projects</h2>
+			<!-- https://place-puppy.com/500x300 -->
+			<div class="project-group col-12 col-md-6 col-lg-4 offset-lg-1">
+				<div class="card border-0" >
+					<img src="https://place-puppy.com/500x300" class="card-img-top" alt="...">
+					<div class="card-body">
+						<h5 class="card-title text-dark text-center">Project Name 1</h5>
 					</div>
 				</div>
-
-				<div class="project-group col-12 col-md-6 col-lg-4 offset-lg-1">
-					<div class="card border-0" >
-						<img src="https://placekitten.com/500/300" class="card-img-top" alt="...">
-						<div class="card-body">
-							<h5 class="card-title text-dark text-center">Project Name 2</h5>
-						</div>
-					</div>
-					<div class="project-description px-5 pt-1">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien risus, cursus nec ante vel, rhoncus elementum lorem. Maecenas porttitor, velit et hendrerit pharetra, quam purus sollicitudin nisl, vitae blandit.</p>
-					</div>
-				</div>
-
-				<div class="project-group col-12 col-md-6 col-lg-4 offset-lg-1">
-					<div class="card border-0" >
-						<img src="https://place-puppy.com/450x450" class="card-img-top" alt="...">
-						<div class="card-body">
-							<h5 class="card-title text-dark text-center">Project Name 3</h5>
-						</div>
-					</div>
-					<div class="project-description px-5 pt-1">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien risus, cursus nec ante vel, rhoncus elementum lorem. Maecenas porttitor, velit et hendrerit pharetra, quam purus sollicitudin nisl, vitae blandit.</p>
-					</div>
-				</div>
-
-				<div class="project-group col-12 col-md-6 col-lg-4 offset-lg-1">
-					<div class="card border-0" >
-						<img src="https://placekitten.com/450/450" class="card-img-top" alt="...">
-						<div class="card-body">
-							<h5 class="card-title text-dark text-center">Project Name 4</h5>
-						</div>
-					</div>
-					<div class="project-description px-5 pt-1">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien risus, cursus nec ante vel, rhoncus elementum lorem. Maecenas porttitor, velit et hendrerit pharetra, quam purus sollicitudin nisl, vitae blandit.</p>
-					</div>
+				<div class="project-description px-5 pt-1">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien risus, cursus nec ante vel, rhoncus elementum lorem. Maecenas porttitor, velit et hendrerit pharetra, quam purus sollicitudin nisl, vitae blandit.</p>
 				</div>
 			</div>
+
+			<div class="project-group col-12 col-md-6 col-lg-4 offset-lg-1">
+				<div class="card border-0" >
+					<img src="https://placekitten.com/500/300" class="card-img-top" alt="...">
+					<div class="card-body">
+						<h5 class="card-title text-dark text-center">Project Name 2</h5>
+					</div>
+				</div>
+				<div class="project-description px-5 pt-1">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien risus, cursus nec ante vel, rhoncus elementum lorem. Maecenas porttitor, velit et hendrerit pharetra, quam purus sollicitudin nisl, vitae blandit.</p>
+				</div>
+			</div>
+
+			<div class="project-group col-12 col-md-6 col-lg-4 offset-lg-1">
+				<div class="card border-0" >
+					<img src="https://place-puppy.com/450x450" class="card-img-top" alt="...">
+					<div class="card-body">
+						<h5 class="card-title text-dark text-center">Project Name 3</h5>
+					</div>
+				</div>
+				<div class="project-description px-5 pt-1">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien risus, cursus nec ante vel, rhoncus elementum lorem. Maecenas porttitor, velit et hendrerit pharetra, quam purus sollicitudin nisl, vitae blandit.</p>
+				</div>
+			</div>
+
+			<div class="project-group col-12 col-md-6 col-lg-4 offset-lg-1">
+				<div class="card border-0" >
+					<img src="https://placekitten.com/450/450" class="card-img-top" alt="...">
+					<div class="card-body">
+						<h5 class="card-title text-dark text-center">Project Name 4</h5>
+					</div>
+				</div>
+				<div class="project-description px-5 pt-1">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien risus, cursus nec ante vel, rhoncus elementum lorem. Maecenas porttitor, velit et hendrerit pharetra, quam purus sollicitudin nisl, vitae blandit.</p>
+				</div>
+			</div>
+		</div>
 		<!-- End Projects Section -->
 
 		<!-- Tools Section -->
-			<div  class="row text-white min-vh-100" id="tools">
-				<div class="col-12">
-					<h3 class="">Core Tools</h3>
-					<img src="images/logo-html5.png"/>
-                    <img src="images/logo-css3.png"/>   
-                    <img src="images/logo-javascript.png"/>
-				</div>
-				<div class="col-12">
-					<h3 class="">Database</h3>
-                    <img src="images/logo-mongodb.png"/>
-				</div>
-				<div class="col-12">
-					<h3 class="">Version Control and Collaboration</h3>
-                    <img src="images/logo-git.png"/>
-                    <img src="images/logo-gitlab-ci-cd.png"/>
-                    <img src="images/logo-github.png"/>
-				</div>
-				<div class="col-12">
-					<h3 class="">Servers and Deployment</h3>
-                    <img src="images/logo-mongodb.png"/>
-                    <img src="images/logo-heroku.png"/>
-				</div>
-
+		<div  class="row text-white min-vh-100" id="tools">
+			<div class="col-12">
+				<h3 class="">Core Tools</h3>
+				<img src="images/logo-html5.png"/>
+				<img src="images/logo-css3.png"/>   
+				<img src="images/logo-javascript.png"/>
 			</div>
+			<div class="col-12">
+				<h3 class="">Database</h3>
+				<img src="images/logo-mongodb.png"/>
+			</div>
+			<div class="col-12">
+				<h3 class="">Version Control and Collaboration</h3>
+				<img src="images/logo-git.png"/>
+				<img src="images/logo-gitlab-ci-cd.png"/>
+				<img src="images/logo-github.png"/>
+			</div>
+			<div class="col-12">
+				<h3 class="">Servers and Deployment</h3>
+				<img src="images/logo-mongodb.png"/>
+				<img src="images/logo-heroku.png"/>
+			</div>
+
+		</div>
 		<!-- End Tools Section -->
+
+		<!-- Contact section -->
+		<div id="contact" class="row text-white">
+			<div class="col-12">
+				<h2>Reach out</h2>
+			</div>
+			<div class="col offset col-lg-4 bg-primary">
+				<form class="px-5 py-2">
+					<div class="d-flex ">
+						<div class="form-group d-flex flex-column">
+							<label for="name">Your Full Name</label>
+							<input type="text" class="form-control" id="name" aria-describedby="name">
+						</div>
+						<div class="form-group d-flex flex-column" >
+							<label for="email">Your Email</label>
+							<input type="email" class="form-control" id="email" aria-describedby="name">
+						</div>
+					</div>
+					<div class="form-group">
+					  <label for="message">Your Message</label>
+					  <textarea class="form-control" id="message" rows="3"></textarea>
+					</div>
+				</form>
+			</div>				
+		</div>
+		<!-- End Contact section -->
 	</div>
 
 	<!-- End Main content -->
