--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <body class="bg-dark">
 	<!-- Navbar -->
 
-	<nav class="navbar navbar-expand-md navbar-light bg-light px-5">
-		<a class="navbar-brand" href="#">ICON HERE</a>
+	<nav id="navbar" class="navbar navbar-expand-sm navbar-dark bg-dark px-5 fixed-top">
+		<a class="navbar-brand font-weight-bold" href="#">BEN TOLANG</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -144,12 +144,12 @@
 			</div>
 			<div class="col offset col-lg-4 bg-primary">
 				<form class="px-5 py-2">
-					<div class="d-flex ">
-						<div class="form-group d-flex flex-column">
+					<div class="row">
+						<div class="col-12 col-md-6 form-group">
 							<label for="name">Your Full Name</label>
 							<input type="text" class="form-control" id="name" aria-describedby="name">
 						</div>
-						<div class="form-group d-flex flex-column" >
+						<div class="col-12 col-md-6 form-group">
 							<label for="email">Your Email</label>
 							<input type="email" class="form-control" id="email" aria-describedby="name">
 						</div>
@@ -159,6 +159,7 @@
 					  <textarea class="form-control" id="message" rows="3"></textarea>
 					</div>
 				</form>
+
 			</div>				
 		</div>
 		<!-- End Contact section -->
@@ -167,7 +168,7 @@
 	<!-- End Main content -->
 
 
-
+	<script type="text/javascript" src="./script.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 </body>
