--- a/index.html
+++ b/index.html
@@ -41,23 +41,20 @@
 	<div id="main" class="container-fluid">
 
 		<!-- Landing section -->
-		<div id="landing" class="min-vh-50">
-			<div id="fg-landing" class="min-vh-50">
-
+		<div id="landing" class="row">
+			<div class="col">
+				<div id="aboutme" class="text-white mt-5">
+					<h3 class="">About Me</h3>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. In gravida diam eget viverra venenatis. Vivamus semper sem eget mollis ultricies. Cras turpis lectus, sodales interdum luctus quis, gravida id erat. Phasellus aliquam condimentum commodo. Sed non magna finibus, vestibulum diam.
+					</p>
+				</div>
 			</div>
-
-		</div>
-
-		<div id="aboutme" class="text-white mt-5">
-			<h3 class="">About Me</h3>
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. In gravida diam eget viverra venenatis. Vivamus semper sem eget mollis ultricies. Cras turpis lectus, sodales interdum luctus quis, gravida id erat. Phasellus aliquam condimentum commodo. Sed non magna finibus, vestibulum diam.
-			</p>
 		</div>
 		<!-- End Landing section -->
 
 		<!-- Projects Section -->
-		<div id="projects" class="row px-3 text-white">
+		<div id="projects" class="row  text-white">
 			<h2 class="col-12 text-lg-center">Projects</h2>
 			<!-- https://place-puppy.com/500x300 -->
 			<div class="project-group col-12 col-md-6 col-lg-4 offset-lg-1">
