remove bg image from landing page, add px-5 to #main

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<!-- End Navbar -->
 
 	<!-- Main content -->
-	<div id="main" class="container-fluid">
+	<div id="main" class="container-fluid px-5">
 
 		<!-- Landing section -->
 		<div id="landing" class="row">
