--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
 <body class="bg-dark">
 	<!-- Navbar -->
 
-	<nav id="navbar" class="navbar navbar-expand-sm navbar-dark bg-dark px-5 fixed-top">
+	<nav id="navbar" class="navbar navbar-expand-sm navbar-dark bg-dark  fixed-top">
 		<a class="navbar-brand font-weight-bold" href="#">BEN TOLANG</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav ml-auto">
@@ -38,13 +37,13 @@
 	<!-- End Navbar -->
 
 	<!-- Main content -->
-	<div id="main" class="container-fluid px-5">
+	<div id="main" class="container-fluid px-md-5">
 
 		<!-- Landing section -->
 		<div id="landing" class="row">
 			<div class="col">
 				<div id="aboutme" class="text-white mt-5">
-					<h3 class="">About Me</h3>
+					<h2 class="">About Me</h2>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. In gravida diam eget viverra venenatis. Vivamus semper sem eget mollis ultricies. Cras turpis lectus, sodales interdum luctus quis, gravida id erat. Phasellus aliquam condimentum commodo. Sed non magna finibus, vestibulum diam.
 					</p>
@@ -54,7 +53,7 @@
 		<!-- End Landing section -->
 
 		<!-- Projects Section -->
-		<div id="projects" class="row  text-white">
+		<div id="projects" class="row text-white mt-5">
 			<h2 class="col-12 text-lg-center">Projects</h2>
 			<!-- https://place-puppy.com/500x300 -->
 			<div class="project-group col-12 col-md-6 col-lg-4 offset-lg-1">
@@ -108,7 +107,7 @@
 		<!-- End Projects Section -->
 
 		<!-- Tools Section -->
-		<div  class="row text-white min-vh-100" id="tools">
+		<div  class="row text-white min-vh-100 mt-5" id="tools">
 			<div class="col-12">
 				<h3 class="">Core Tools</h3>
 				<img src="images/logo-html5.png"/>
@@ -135,9 +134,9 @@
 		<!-- End Tools Section -->
 
 		<!-- Contact section -->
-		<div id="contact" class="row text-white">
+		<div id="contact" class="row text-white mt-5">
 			<div class="col-12">
-				<h2>Reach out</h2>
+				<h2>Please reach out</h2>
 			</div>
 			<div class="col offset col-lg-4 bg-primary">
 				<form class="px-5 py-2">
