--- a/index.html
+++ b/index.html
@@ -15,33 +15,39 @@
 <body class="bg-dark">
 	<!-- Navbar -->
 
-	<nav id="navbar" class="navbar navbar-expand-sm navbar-dark bg-dark  fixed-top">
-		<a class="navbar-brand font-weight-bold" href="#">BEN TOLANG</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarNav">
-			<ul class="navbar-nav ml-auto">
-				<li class="nav-item active">
-					<a class="nav-link" href="#main">Home <span class="sr-only">(current)</span></a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Projects</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Contact</a>
-				</li>
+	<nav id="navbar" class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
+		<div class="container-fluid">
+			<div class="row w-100">
+				<a class="navbar-brand font-weight-bold" href="#">BEN TOLANG</a>
+				<div class="ml-auto">
+					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="navbarNav">
+						<ul class="navbar-nav ml-auto">
+							<li class="nav-item active">
+								<a class="nav-link" href="#main">Home <span class="sr-only">(current)</span></a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Projects</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Contact</a>
+							</li>
 
-			</ul>
+						</ul>
+					</div>
+				</div>
+			</div>
 		</div>
 	</nav>
 	<!-- End Navbar -->
 
 	<!-- Main content -->
-	<div id="main" class="container-fluid px-md-5">
+	<div id="main" class="container-fluid ">
 
 		<!-- Landing section -->
 		<div id="landing" class="row">
-			<div class="col">
+			<div class="col col-md-10 mx-auto">
 				<div id="aboutme" class="text-white mt-5">
 					<h2 class="">About Me</h2>
 					<p>
@@ -54,9 +60,9 @@
 
 		<!-- Projects Section -->
 		<div id="projects" class="row text-white mt-5">
-			<h2 class="col-12 text-lg-center">Projects</h2>
+			<h2 class="col-12 col-md-10 mx-auto">Projects</h2>
 			<!-- https://place-puppy.com/500x300 -->
-			<div class="project-group col-12 col-md-6 col-lg-4 offset-lg-1">
+			<div class="project-group col-12 col-md-5 offset-md-1">
 				<div class="card border-0" >
 					<img src="https://place-puppy.com/500x300" class="card-img-top" alt="...">
 					<div class="card-body">
@@ -68,7 +74,7 @@
 				</div>
 			</div>
 
-			<div class="project-group col-12 col-md-6 col-lg-4 offset-lg-1">
+			<div class="project-group col-12 col-md-5">
 				<div class="card border-0" >
 					<img src="https://placekitten.com/500/300" class="card-img-top" alt="...">
 					<div class="card-body">
@@ -80,7 +86,7 @@
 				</div>
 			</div>
 
-			<div class="project-group col-12 col-md-6 col-lg-4 offset-lg-1">
+			<div class="project-group col-12 col-md-5 offset-md-1">
 				<div class="card border-0" >
 					<img src="https://place-puppy.com/450x450" class="card-img-top" alt="...">
 					<div class="card-body">
@@ -92,7 +98,7 @@
 				</div>
 			</div>
 
-			<div class="project-group col-12 col-md-6 col-lg-4 offset-lg-1">
+			<div class="project-group col-12 col-md-5">
 				<div class="card border-0" >
 					<img src="https://placekitten.com/450/450" class="card-img-top" alt="...">
 					<div class="card-body">
@@ -107,24 +113,24 @@
 		<!-- End Projects Section -->
 
 		<!-- Tools Section -->
-		<div  class="row text-white min-vh-100 mt-5" id="tools">
-			<div class="col-12">
+		<div  class="row text-white mt-5" id="tools">
+			<div class="col-12 col-md-6 h-50">
 				<h3 class="">Core Tools</h3>
 				<img src="images/logo-html5.png"/>
 				<img src="images/logo-css3.png"/>   
 				<img src="images/logo-javascript.png"/>
 			</div>
-			<div class="col-12">
+			<div class="col-12 col-md-6 h-50">
 				<h3 class="">Database</h3>
 				<img src="images/logo-mongodb.png"/>
 			</div>
-			<div class="col-12">
+			<div class="col-12 col-md-6 h-50">
 				<h3 class="">Version Control and Collaboration</h3>
 				<img src="images/logo-git.png"/>
 				<img src="images/logo-gitlab-ci-cd.png"/>
 				<img src="images/logo-github.png"/>
 			</div>
-			<div class="col-12">
+			<div class="col-12 col-md-6 h-50">
 				<h3 class="">Servers and Deployment</h3>
 				<img src="images/logo-mongodb.png"/>
 				<img src="images/logo-heroku.png"/>
