--- a/index.html
+++ b/index.html
@@ -15,35 +15,38 @@
 <body class="bg-dark">
 	<!-- Navbar -->
 
-	<nav id="navbar" class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
-		<div class="container-fluid">
+	<nav id="navbar" class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top ">
+		<div class="container-fluid px-0">
 			<div class="row w-100">
-				<a class="navbar-brand font-weight-bold" href="#">BEN TOLANG</a>
-				<div class="ml-auto">
-					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
-					</button>
-					<div class="collapse navbar-collapse" id="navbarNav">
-						<ul class="navbar-nav ml-auto">
-							<li class="nav-item active">
-								<a class="nav-link" href="#main">Home <span class="sr-only">(current)</span></a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#">Projects</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#">Contact</a>
-							</li>
+				<div class="col col-md-10 mx-auto d-flex">
+					<a class="navbar-brand font-weight-bold" href="#">BEN TOLANG</a>
+					<div class="ml-auto">
+						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
+						</button>
+						<div class="collapse navbar-collapse" id="navbarNav">
+							<ul class="navbar-nav ml-auto">
+								<li class="nav-item active">
+									<a class="nav-link" href="#main">Home <span class="sr-only">(current)</span></a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="#">Projects</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="#">Contact</a>
+								</li>
 
-						</ul>
+							</ul>
+						</div>
 					</div>
 				</div>
+
 			</div>
 		</div>
 	</nav>
 	<!-- End Navbar -->
 
 	<!-- Main content -->
-	<div id="main" class="container-fluid ">
+	<div id="main" class="container-fluid px-0">
 
 		<!-- Landing section -->
 		<div id="landing" class="row">
