update style in Tools section, capitalize all h2 content

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<div id="landing" class="row">
 			<div class="col col-md-10 mx-auto">
 				<div id="aboutme" class="text-white mt-5">
-					<h2 class="">About Me</h2>
+					<h2 class="font-italic">ABOUT ME</h2>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. In gravida diam eget viverra venenatis. Vivamus semper sem eget mollis ultricies. Cras turpis lectus, sodales interdum luctus quis, gravida id erat. Phasellus aliquam condimentum commodo. Sed non magna finibus, vestibulum diam.
 					</p>
@@ -63,7 +63,7 @@
 
 		<!-- Projects Section -->
 		<div id="projects" class="row text-white mt-5">
-			<h2 class="col-12 col-md-10 mx-auto">Projects</h2>
+			<h2 class="col-12 col-md-10 mx-auto">PROJECTS</h2>
 			<!-- https://place-puppy.com/500x300 -->
 			<div class="project-group col-12 col-md-5 offset-md-1">
 				<div class="card border-0" >
@@ -117,28 +117,30 @@
 
 		<!-- Tools Section -->
 		<div  class="row text-white mt-5" id="tools">
-			<div class="col-12 col-md-6 h-50">
+			<div class="col-12 col-md-10 offset-md-1 mb-3">
+				<h2>TOOLS</h2>
+			</div>
+			<div class="col-12 col-md-5 offset-md-1 ">
 				<h3 class="">Core Tools</h3>
 				<img src="images/logo-html5.png"/>
 				<img src="images/logo-css3.png"/>   
 				<img src="images/logo-javascript.png"/>
 			</div>
-			<div class="col-12 col-md-6 h-50">
+			<div class="col-12 col-md-5 offset-md-1 ">
 				<h3 class="">Database</h3>
 				<img src="images/logo-mongodb.png"/>
 			</div>
-			<div class="col-12 col-md-6 h-50">
+			<div class="col-12 col-md-5 offset-md-1 ">
 				<h3 class="">Version Control and Collaboration</h3>
 				<img src="images/logo-git.png"/>
 				<img src="images/logo-gitlab-ci-cd.png"/>
 				<img src="images/logo-github.png"/>
 			</div>
-			<div class="col-12 col-md-6 h-50">
+			<div class="col-12 col-md-5 offset-md-1 ">
 				<h3 class="">Servers and Deployment</h3>
 				<img src="images/logo-mongodb.png"/>
 				<img src="images/logo-heroku.png"/>
 			</div>
-
 		</div>
 		<!-- End Tools Section -->
 
