--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
 
 		<!-- Contact section -->
 		<div id="contact" class="row text-white mt-5">
-			<div class="col-12">
+			<div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 mb-3">
 				<h2>Please reach out</h2>
 			</div>
-			<div class="col offset col-lg-4 bg-primary">
+			<div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 bg-primary">
 				<form class="px-5 py-2">
 					<div class="row">
 						<div class="col-12 col-md-6 form-group">
