--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 		<!-- Landing section -->
 		<div id="landing" class="row">
-			<div class="col col-md-10 mx-auto">
+			<div class="col col-md-10 col-lg-8 mx-auto">
 				<div id="aboutme" class="text-white mt-5">
 					<h2 class="font-italic">ABOUT ME</h2>
 					<p>
@@ -63,9 +63,9 @@
 
 		<!-- Projects Section -->
 		<div id="projects" class="row text-white mt-5">
-			<h2 class="col-12 col-md-10 mx-auto">PROJECTS</h2>
+			<h2 class="col-12 col-md-10 col-lg-8 mx-auto">PROJECTS</h2>
 			<!-- https://place-puppy.com/500x300 -->
-			<div class="project-group col-12 col-md-5 offset-md-1">
+			<div class="project-group col-12 col-md-5 offset-md-1 col-lg-4 offset-lg-2">
 				<div class="card border-0" >
 					<img src="https://place-puppy.com/500x300" class="card-img-top" alt="...">
 					<div class="card-body">
@@ -77,7 +77,7 @@
 				</div>
 			</div>
 
-			<div class="project-group col-12 col-md-5">
+			<div class="project-group col-12 col-md-5 col-lg-4">
 				<div class="card border-0" >
 					<img src="https://placekitten.com/500/300" class="card-img-top" alt="...">
 					<div class="card-body">
@@ -89,7 +89,7 @@
 				</div>
 			</div>
 
-			<div class="project-group col-12 col-md-5 offset-md-1">
+			<div class="project-group col-12 col-md-5 offset-md-1 col-lg-4 offset-lg-2">
 				<div class="card border-0" >
 					<img src="https://place-puppy.com/450x450" class="card-img-top" alt="...">
 					<div class="card-body">
@@ -101,7 +101,7 @@
 				</div>
 			</div>
 
-			<div class="project-group col-12 col-md-5">
+			<div class="project-group col-12 col-md-5 col-lg-4">
 				<div class="card border-0" >
 					<img src="https://placekitten.com/450/450" class="card-img-top" alt="...">
 					<div class="card-body">
@@ -117,26 +117,26 @@
 
 		<!-- Tools Section -->
 		<div  class="row text-white mt-5" id="tools">
-			<div class="col-12 col-md-10 offset-md-1 mb-3">
+			<div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 mb-3">
 				<h2>TOOLS</h2>
 			</div>
-			<div class="col-12 col-md-5 offset-md-1 ">
+			<div class="col-12 col-md-5 offset-md-1 col-lg-4 offset-lg-2 ">
 				<h3 class="">Core Tools</h3>
 				<img src="images/logo-html5.png"/>
 				<img src="images/logo-css3.png"/>   
 				<img src="images/logo-javascript.png"/>
 			</div>
-			<div class="col-12 col-md-5 offset-md-1 ">
+			<div class="col-12 col-md-5 offset-md-1 col-lg-4 ">
 				<h3 class="">Database</h3>
 				<img src="images/logo-mongodb.png"/>
 			</div>
-			<div class="col-12 col-md-5 offset-md-1 ">
+			<div class="col-12 col-md-5 offset-md-1 col-lg-4 offset-lg-2">
 				<h3 class="">Version Control and Collaboration</h3>
 				<img src="images/logo-git.png"/>
 				<img src="images/logo-gitlab-ci-cd.png"/>
 				<img src="images/logo-github.png"/>
 			</div>
-			<div class="col-12 col-md-5 offset-md-1 ">
+			<div class="col-12 col-md-5 offset-md-1 col-lg-4 ">
 				<h3 class="">Servers and Deployment</h3>
 				<img src="images/logo-mongodb.png"/>
 				<img src="images/logo-heroku.png"/>
@@ -147,10 +147,10 @@
 		<!-- Contact section -->
 		<div id="contact" class="row text-white mt-5">
 			<div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 mb-3">
-				<h2>Please reach out</h2>
+				<h2>Contact Me</h2>
 			</div>
-			<div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 bg-primary">
-				<form class="px-5 py-2">
+			<div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
+				<form class=" py-2">
 					<div class="row">
 						<div class="col-12 col-md-6 form-group">
 							<label for="name">Your Full Name</label>
