--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<nav id="navbar" class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top ">
 		<div class="container-fluid px-0">
 			<div class="row w-100">
-				<div class="col col-md-10 mx-auto d-flex">
+				<div class="col col-md-10 col-lg-8 mx-auto d-flex">
 					<a class="navbar-brand font-weight-bold" href="#">BEN TOLANG</a>
 					<div class="ml-auto">
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
@@ -29,12 +29,14 @@
 									<a class="nav-link" href="#main">Home <span class="sr-only">(current)</span></a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" href="#">Projects</a>
+									<a class="nav-link" href="#projects">Projects</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" href="#">Contact</a>
+									<a class="nav-link" href="#tools">Tools</a>
 								</li>
-
+								<li class="nav-item">
+									<a class="nav-link" href="#contact">Contact</a>
+								</li>
 							</ul>
 						</div>
 					</div>
@@ -46,7 +48,7 @@
 	<!-- End Navbar -->
 
 	<!-- Main content -->
-	<div id="main" class="container-fluid px-0">
+	<div id="main" class="container-fluid px-3">
 
 		<!-- Landing section -->
 		<div id="landing" class="row">
@@ -145,9 +147,9 @@
 		<!-- End Tools Section -->
 
 		<!-- Contact section -->
-		<div id="contact" class="row text-white mt-5">
+		<div id="contact" class="row text-white mt-5 mb-5">
 			<div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 mb-3">
-				<h2>Contact Me</h2>
+				<h2>Get In Touch</h2>
 			</div>
 			<div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
 				<form class=" py-2">
@@ -163,8 +165,9 @@
 					</div>
 					<div class="form-group">
 					  <label for="message">Your Message</label>
-					  <textarea class="form-control" id="message" rows="3"></textarea>
+					  <textarea class="form-control" id="message" rows="5"></textarea>
 					</div>
+					<button id="contact-btn" type="submit" class="w-25 btn btn-light btn-lg">Send</button>
 				</form>
 
 			</div>				
