--- a/index.html
+++ b/index.html
@@ -4,27 +4,35 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- External CSS -->
-	<link rel="stylesheet" type="text/css" href="./index.css">
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
+	<!-- External CSS -->
+	<link rel="stylesheet" type="text/css" href="./index.css">
+
+	<!-- Google Fonts -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,500;0,600;1,500;1,600;0,800;1,800&display=swap" rel="stylesheet">
+
+	<link href="https://fonts.googleapis.com/css2?family=Reem+Kufi+Fun:wght@400;600&display=swap" rel="stylesheet">
+
 	<title>Portfolio - Web Developer</title>
 </head>
-<body class="bg-dark">
+<body class="">
 	<!-- Navbar -->
 
 	<nav id="navbar" class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top ">
 		<div class="container-fluid px-0">
 			<div class="row w-100">
 				<div class="col col-md-10 col-lg-8 mx-auto d-flex">
-					<a class="navbar-brand font-weight-bold" href="#">BEN TOLANG</a>
-					<div class="ml-auto">
+					<a class="navbar-brand font-italic" href="#">BEN TOLANG</a>
+					<div class="ml-auto py-1">
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
 						</button>
 						<div class="collapse navbar-collapse" id="navbarNav">
-							<ul class="navbar-nav ml-auto">
+							<ul class="navbar-nav ml-auto  ">
 								<li class="nav-item active">
 									<a class="nav-link" href="#main">Home <span class="sr-only">(current)</span></a>
 								</li>
@@ -51,10 +59,13 @@
 	<div id="main" class="container-fluid px-3">
 
 		<!-- Landing section -->
-		<div id="landing" class="row">
-			<div class="col col-md-10 col-lg-8 mx-auto">
+		<div id="landing" class="row ">
+			<div class="col col-md-10 col-lg-8 mx-auto ">
 				<div id="aboutme" class="text-white mt-5">
-					<h2 class="font-italic">ABOUT ME</h2>
+					<h2 class="">Hello, I'm Ben</h2>
+					<p>
+						I'm aspiring to be a <span id="fswd" class="font-italic">Full Stack Web Developer</span>
+					</p>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. In gravida diam eget viverra venenatis. Vivamus semper sem eget mollis ultricies. Cras turpis lectus, sodales interdum luctus quis, gravida id erat. Phasellus aliquam condimentum commodo. Sed non magna finibus, vestibulum diam.
 					</p>
@@ -65,7 +76,7 @@
 
 		<!-- Projects Section -->
 		<div id="projects" class="row text-white mt-5">
-			<h2 class="col-12 col-md-10 col-lg-8 mx-auto">PROJECTS</h2>
+			<h2 class="col-12 col-md-10 col-lg-8 mx-auto">Projects</h2>
 			<!-- https://place-puppy.com/500x300 -->
 			<div class="project-group col-12 col-md-5 offset-md-1 col-lg-4 offset-lg-2">
 				<div class="card border-0" >
@@ -120,7 +131,7 @@
 		<!-- Tools Section -->
 		<div  class="row text-white mt-5" id="tools">
 			<div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 mb-3">
-				<h2>TOOLS</h2>
+				<h2>Tools</h2>
 			</div>
 			<div class="col-12 col-md-5 offset-md-1 col-lg-4 offset-lg-2 ">
 				<h3 class="">Core Tools</h3>
@@ -140,7 +151,7 @@
 			</div>
 			<div class="col-12 col-md-5 offset-md-1 col-lg-4 ">
 				<h3 class="">Servers and Deployment</h3>
-				<img src="images/logo-mongodb.png"/>
+                <img src="images/logo-expressjs.png"/>
 				<img src="images/logo-heroku.png"/>
 			</div>
 		</div>
@@ -159,20 +170,48 @@
 							<input type="text" class="form-control" id="name" aria-describedby="name">
 						</div>
 						<div class="col-12 col-md-6 form-group">
-							<label for="email">Your Email</label>
+							<label for="email">Your Email </label>
 							<input type="email" class="form-control" id="email" aria-describedby="name">
 						</div>
 					</div>
+
 					<div class="form-group">
 					  <label for="message">Your Message</label>
 					  <textarea class="form-control" id="message" rows="5"></textarea>
 					</div>
-					<button id="contact-btn" type="submit" class="w-25 btn btn-light btn-lg">Send</button>
-				</form>
+					<button id="contact-btn" type="submit" class="w-25 btn btn-light btn-lg"  data-toggle="modal" data-target="#contact-modal">Send</button>
 
+					<div class="modal fade" id="contact-modal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
+					  <div class="modal-dialog">
+					    <div class="modal-content text-dark">
+					      <div class="modal-header">
+					        <h5 class="modal-title" id="modalLabel">Message Sent!</h5>
+					        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					          <span aria-hidden="true">&times;</span>
+					        </button>
+					      </div>
+					      <div class="modal-body text-center">
+					        Thank you for reaching out!
+					      </div>
+					      <div class="modal-footer">
+					        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+					      </div>
+					    </div>
+					  </div>
+					</div>
+
+				</form>
+				<!-- End Contact section -->
+				
 			</div>				
+			<div class="col-12 mx-auto text-center	">
+				<a href="#main"><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16">
+				  <path d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z"/>
+				</svg></a>
+			</div>
 		</div>
-		<!-- End Contact section -->
+
+
 	</div>
 
 	<!-- End Main content -->
