--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
 
 	<link href="https://fonts.googleapis.com/css2?family=Reem+Kufi+Fun:wght@400;600&display=swap" rel="stylesheet">
 
+	<link href="https://fonts.googleapis.com/css2?family=Reem+Kufi:wght@400;700&display=swap" rel="stylesheet">
+
 	<title>Portfolio - Web Developer</title>
 </head>
 <body class="">
+	<div id="top" class="p-0 m-0"></div>
 	<!-- Navbar -->
 		<nav id="navbar" class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top ">
 			<div class="container-fluid px-0">
@@ -62,8 +65,8 @@
 						<div class="col col-md-10 col-lg-8 mx-auto ">
 							<div id="aboutme" class="text-white mt-5">
 								<h2 class="">Hello, I'm Ben</h2>
-								<p>
-									I'm aspiring to be a <span id="fswd" class="font-italic">Full Stack Web Developer</span>
+								<p >
+									I'm an aspiring <span id="fswd" class="font-italic">Full Stack Web Developer</span> currently taking the <a href="https://zuitt.co/">Zuitt Coding Bootcamp</a>
 								</p>
 								<p>
 									Lorem ipsum dolor sit amet, consectetur adipiscing elit. In gravida diam eget viverra venenatis. Vivamus semper sem eget mollis ultricies. Cras turpis lectus, sodales interdum luctus quis, gravida id erat. Phasellus aliquam condimentum commodo. Sed non magna finibus, vestibulum diam.
@@ -204,7 +207,7 @@
 							
 						</div>				
 						<div class="col-12 mx-auto text-center	">
-							<a href="#main"><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16">
+							<a href="#top"><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16">
 							  <path d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z"/>
 							</svg></a>
 						</div>
