add project images to dir, update images in Projects section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body class="">
 	<div id="top" class="p-0 m-0"></div>
 	<!-- Navbar -->
-		<nav id="navbar" class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top ">
+		<nav id="navbar" class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top mb-5 ">
 			<div class="container-fluid px-0">
 				<div class="row w-100">
 					<div class="col col-md-10 col-lg-8 mx-auto d-flex">
@@ -65,12 +65,10 @@
 						<div class="col col-md-10 col-lg-8 mx-auto ">
 							<div id="aboutme" class="text-white mt-5">
 								<h2 class="">Hello, I'm Ben</h2>
-								<p >
+								<p>
 									I'm an aspiring <span id="fswd" class="font-italic">Full Stack Web Developer</span> currently taking the <a href="https://zuitt.co/">Zuitt Coding Bootcamp</a>
 								</p>
-								<p>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit. In gravida diam eget viverra venenatis. Vivamus semper sem eget mollis ultricies. Cras turpis lectus, sodales interdum luctus quis, gravida id erat. Phasellus aliquam condimentum commodo. Sed non magna finibus, vestibulum diam.
-								</p>
+
 							</div>
 						</div>
 					</div>
@@ -82,7 +80,7 @@
 						<!-- https://place-puppy.com/500x300 -->
 						<div class="project-group col-12 col-md-5 offset-md-1 col-lg-4 offset-lg-2">
 							<div class="card border-0" >
-								<img src="https://place-puppy.com/500x300" class="card-img-top" alt="...">
+								<img src="images/project-1.png" class="card-img-top" alt="...">
 								<div class="card-body">
 									<h5 class="card-title text-dark text-center">Project Name 1</h5>
 								</div>
@@ -94,19 +92,19 @@
 
 						<div class="project-group col-12 col-md-5 col-lg-4">
 							<div class="card border-0" >
-								<img src="https://placekitten.com/500/300" class="card-img-top" alt="...">
+								<img src="images/project-2.png" class="card-img-top" alt="...">
 								<div class="card-body">
-									<h5 class="card-title text-dark text-center">Project Name 2</h5>
+									<h5 class="card-title text-dark text-center">Study Buddy App</h5>
 								</div>
 							</div>
 							<div class="project-description px-5 pt-1">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien risus, cursus nec ante vel, rhoncus elementum lorem. Maecenas porttitor, velit et hendrerit pharetra, quam purus sollicitudin nisl, vitae blandit.</p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien ris.</p>
 							</div>
 						</div>
 
 						<div class="project-group col-12 col-md-5 offset-md-1 col-lg-4 offset-lg-2">
 							<div class="card border-0" >
-								<img src="https://place-puppy.com/450x450" class="card-img-top" alt="...">
+								<img src="images/project-3.png" class="card-img-top" alt="...">
 								<div class="card-body">
 									<h5 class="card-title text-dark text-center">Project Name 3</h5>
 								</div>
@@ -118,7 +116,7 @@
 
 						<div class="project-group col-12 col-md-5 col-lg-4">
 							<div class="card border-0" >
-								<img src="https://placekitten.com/450/450" class="card-img-top" alt="...">
+								<img src="images/project-4.png" class="card-img-top" alt="...">
 								<div class="card-body">
 									<h5 class="card-title text-dark text-center">Project Name 4</h5>
 								</div>
