update projects, landing, footer

--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
 									I'm an aspiring <span id="fswd" class="font-italic">Full Stack Web Developer</span> currently taking the <a href="https://zuitt.co/">Zuitt Coding Bootcamp</a>
 								</p>
 
+								<p>Zuitt offers the No. 1 Coding Bootcamp in the Philippines.</p>
+
 							</div>
 						</div>
 					</div>
@@ -82,11 +84,11 @@
 							<div class="card border-0" >
 								<img src="images/project-1.png" class="card-img-top" alt="...">
 								<div class="card-body">
-									<h5 class="card-title text-dark text-center">Project Name 1</h5>
+									<h5 class="card-title text-dark text-center">Food Planner App</h5>
 								</div>
 							</div>
-							<div class="project-description px-5 pt-1">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien risus, cursus nec ante vel, rhoncus elementum lorem. Maecenas porttitor, velit et hendrerit pharetra, quam purus sollicitudin nisl, vitae blandit.</p>
+							<div class="project-description px-2 pt-3">
+								<p class="text-center">Effortlessly plan meals, create menus, and generate shopping lists with the Food Planner app. Enjoy stress-free meal planning, personalized suggestions, and easy grocery organization at your fingertips.</p>
 							</div>
 						</div>
 
@@ -97,8 +99,8 @@
 									<h5 class="card-title text-dark text-center">Study Buddy App</h5>
 								</div>
 							</div>
-							<div class="project-description px-5 pt-1">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien ris.</p>
+							<div class="project-description px-2 pt-3">
+								<p class="text-center">Find the perfect Study Buddy with my Study Buddy Finder app. Connect with like-minded students, collaborate on projects, and boost your productivity. Discover study groups, exchange resources, and achieve academic success together.</p>
 							</div>
 						</div>
 
@@ -106,11 +108,11 @@
 							<div class="card border-0" >
 								<img src="images/project-3.png" class="card-img-top" alt="...">
 								<div class="card-body">
-									<h5 class="card-title text-dark text-center">Project Name 3</h5>
+									<h5 class="card-title text-dark text-center">Real Estate Finder</h5>
 								</div>
 							</div>
-							<div class="project-description px-5 pt-1">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien risus, cursus nec ante vel, rhoncus elementum lorem. Maecenas porttitor, velit et hendrerit pharetra, quam purus sollicitudin nisl, vitae blandit.</p>
+							<div class="project-description px-2 pt-3">
+								<p class="text-center">"Find your dream home effortlessly with our Real Estate Finder app. Discover listings, filter preferences, and connect with agents for a seamless property search experience."</p>
 							</div>
 						</div>
 
@@ -118,11 +120,11 @@
 							<div class="card border-0" >
 								<img src="images/project-4.png" class="card-img-top" alt="...">
 								<div class="card-body">
-									<h5 class="card-title text-dark text-center">Project Name 4</h5>
+									<h5 class="card-title text-dark text-center">Online Grocery App</h5>
 								</div>
 							</div>
-							<div class="project-description px-5 pt-1">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien risus, cursus nec ante vel, rhoncus elementum lorem. Maecenas porttitor, velit et hendrerit pharetra, quam purus sollicitudin nisl, vitae blandit.</p>
+							<div class="project-description px-2 pt-3">
+								<p class="text-center">Shop conveniently with this Online Grocery App. Browse a wide selection of products, create personalized shopping lists, and have your groceries delivered right to your doorstep. Enjoy a hassle-free shopping experience from the comfort of your home.</p>
 							</div>
 						</div>
 					</div>
@@ -217,7 +219,8 @@
 			<!-- Footer section -->
 				<footer class="bg-dark py-5">
 					<div class="text-white ">
-						<p class="text-md-center m-0"><span class="px-3">Capstone 1 - Developer Portfolio</span> | <span class="px-3">Zuitt Coding Bootcamp <span class="px-2">©</span> 2023</span></p>
+						<p class="text-md-center m-0"><span class="px-3 d-block d-md-inline">Capstone 1 - Developer Portfolio</span> <span class="px-3">Zuitt Coding Bootcamp <span class="px-2">©</span> 2023</span></p>
+						<p class="text-md-center px-3 mt-3">All projects are fictitious and for educational purposes only.</p>
 					</div>
 				</footer>
 			<!-- Footer section -->
