update style in landing, projects & tools section

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 				<!-- Projects Section -->
 					<div id="projects" class="row text-white mt-5">
-						<h2 class="col-12 col-md-10 col-lg-8 mx-auto">Projects</h2>
+						<h2 class="col-12 col-md-10 col-lg-8 mx-auto text-xl-center mb-3">Projects</h2>
 						<!-- https://place-puppy.com/500x300 -->
 						<div class="project-group col-12 col-md-5 offset-md-1 col-lg-4 offset-lg-2">
 							<div class="card border-0" >
@@ -131,9 +131,9 @@
 				<!-- End Projects Section -->
 
 				<!-- Tools Section -->
-							<div  class="row text-white mt-5" id="tools">
+							<div id="tools" class="row text-white mt-5" >
 								<div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 mb-3">
-									<h2>Tools</h2>
+									<h2 class="text-xl-center">Tools</h2>
 								</div>
 								<div class="col-12 col-md-5 offset-md-1 col-lg-4 offset-lg-2 ">
 									<h3 class="">Core Tools</h3>
