--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				<!-- Landing section -->
 					<div id="landing" class="row ">
 						<div class="col col-md-10 col-lg-8 mx-auto ">
-							<div id="aboutme" class="text-white mt-5">
+							<div id="aboutme" class=" mt-5">
 								<h2 class="">Hello, I'm Ben</h2>
 								<p>
 									I'm an aspiring <span id="fswd" class="font-italic">Full Stack Web Developer</span> currently taking the <a href="https://zuitt.co/">Zuitt Coding Bootcamp</a>
@@ -77,7 +77,7 @@
 				<!-- End Landing section -->
 
 				<!-- Projects Section -->
-					<div id="projects" class="row text-white mt-5">
+					<div id="projects" class="row mt-5">
 						<h2 class="col-12 col-md-10 col-lg-8 mx-auto text-xl-center mb-3">Projects</h2>
 						<!-- https://place-puppy.com/500x300 -->
 						<div class="project-group col-12 col-md-5 offset-md-1 col-lg-4 offset-lg-2">
@@ -131,7 +131,7 @@
 				<!-- End Projects Section -->
 
 				<!-- Tools Section -->
-							<div id="tools" class="row text-white mt-5" >
+							<div id="tools" class="row mt-5" >
 								<div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 mb-3">
 									<h2 class="text-xl-center">Tools</h2>
 								</div>
@@ -160,7 +160,7 @@
 				<!-- End Tools Section -->
 
 				<!-- Contact section -->
-					<div id="contact" class="row text-white mt-5 mb-5">
+					<div id="contact" class="row  mt-5 mb-5">
 						<div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 mb-3">
 							<h2>Get In Touch</h2>
 						</div>
@@ -218,7 +218,7 @@
 			</div>
 			<!-- Footer section -->
 				<footer class="bg-dark py-5">
-					<div class="text-white ">
+					<div class=" ">
 						<p class="text-md-center m-0"><span class="px-3 d-block d-md-inline">Capstone 1 - Developer Portfolio</span> <span class="px-3">Zuitt Coding Bootcamp <span class="px-2">©</span> 2023</span></p>
 						<p class="text-md-center px-3 mt-3">All projects are fictitious and for educational purposes only.</p>
 					</div>
