--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
 				<!-- Tools Section -->
 							<div id="tools" class="row mt-5" >
-								<div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 mb-3">
+								<div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 mb-1">
 									<h2 class="text-xl-center">Tools</h2>
 								</div>
 								<div class="col-12 col-md-5 offset-md-1 col-lg-4 offset-lg-2 ">
@@ -160,10 +160,10 @@
 
 				<!-- Contact section -->
 					<div id="contact" class="row  mt-5 mb-5">
-						<div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 mb-3">
+						<div class="col-12 col-md-10 offset-md-1 col-lg-8 text-xl-center offset-lg-2 mb-1">
 							<h2>Get In Touch</h2>
 						</div>
-						<div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
+						<div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 ">
 							<form class=" py-2">
 								<div class="row">
 									<div class="col-12 col-md-6 form-group">
