add Capstone 1 in projects,

--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
 						<!-- https://place-puppy.com/500x300 -->
 						<div class="project-group col-12 col-md-5 offset-md-1 col-lg-4 offset-lg-2">
 							<div class="card border-0" >
-								<img src="images/project-1.png" class="card-img-top" alt="...">
+								<img src="images/capstone-1.png" class="card-img-top" alt="...">
 								<div class="card-body">
-									<h5 class="card-title text-dark text-center">Food Planner App</h5>
+									<a href="https://benrontol.github.io/webportfolio/" target="_blank"><h5 class="card-title text-dark text-center">Capstone 1 Project - Developer Portfolio</h5></a>
 								</div>
 							</div>
 							<div class="project-description px-2 pt-3">
-								<p class="text-center">Effortlessly plan meals, create menus, and generate shopping lists with the Food Planner app. Enjoy stress-free meal planning, personalized suggestions, and easy grocery organization at your fingertips.</p>
+								<p class="text-center">This is capstone project in Zuitt Coding bootcamp, and also a personal Web Portfolio. This project demonstrates basic Frontend Web design, Responsiveness across all screen sizes was achieved using Bootstap CSS Framework</p>
 							</div>
 						</div>
 
