add letter & word spacing to project descriptions

--- a/index.html
+++ b/index.html
@@ -87,50 +87,50 @@
 				<h2 class="col-12 col-md-10 col-lg-8 col-xl-6 mx-auto" class="text-xl-center">Projects</h2>
 			</div>
 			<!-- https://place-puppy.com/500x300 -->
-			<div class="project-group col-12 col-md-5 offset-md-1 col-lg-4 offset-lg-2 col-xl-3 offset-xl-3">
+			<div class="project-group col-12 col-md-5 offset-md-1 col-lg-4 offset-lg-2 col-xl-3 offset-xl-3 mb-4">
 				<div class="card border-0" >
 					<img src="images/capstone-1.png" class="card-img-top" alt="...">
 					<div class="card-body">
 						<a href="https://benrontol.github.io/webportfolio/" target="_blank"><h5 class="card-title text-dark text-center">Capstone 1 Project - Developer Portfolio</h5></a>
 					</div>
 				</div>
-				<div class="project-description px-2 pt-3">
-					<p class="text-center">This is capstone project in Zuitt Coding bootcamp, and also a personal Web Portfolio. This project demonstrates basic Frontend Web design, Responsiveness across all screen sizes was achieved using Bootstap CSS Framework</p>
+				<div class="project-description px-2 pt-2">
+					<p class="text-center">This is a capstone project in Zuitt Coding bootcamp, and also a personal Web Portfolio. This project demonstrates basic Frontend Web design. Bootstap CSS Framework was used to achieve responsiveness across all screen sizes. </p>
 				</div>
 			</div>
 
-			<div class="project-group col-12 col-md-5 col-lg-4 col-xl-3">
+			<div class="project-group col-12 col-md-5 col-lg-4 col-xl-3 mb-4">
 				<div class="card border-0" >
 					<img src="images/project-2.png" class="card-img-top" alt="...">
 					<div class="card-body">
 						<h5 class="card-title text-dark text-center">Study Buddy App</h5>
 					</div>
 				</div>
-				<div class="project-description px-2 pt-3">
+				<div class="project-description px-2 pt-2">
 					<p class="text-center">Find the perfect Study Buddy with my Study Buddy Finder app. Connect with like-minded students, collaborate on projects, and boost your productivity. Discover study groups, exchange resources, and achieve academic success together.</p>
 				</div>
 			</div>
 
-			<div class="project-group col-12 col-md-5 offset-md-1 col-lg-4 offset-lg-2 col-xl-3 offset-xl-3">
+			<div class="project-group col-12 col-md-5 offset-md-1 col-lg-4 offset-lg-2 col-xl-3 offset-xl-3 mb-4">
 				<div class="card border-0" >
 					<img src="images/project-3.png" class="card-img-top" alt="...">
 					<div class="card-body">
 						<h5 class="card-title text-dark text-center">Real Estate Finder</h5>
 					</div>
 				</div>
-				<div class="project-description px-2 pt-3">
+				<div class="project-description px-2 pt-2">
 					<p class="text-center">"Find your dream home effortlessly with our Real Estate Finder app. Discover listings, filter preferences, and connect with agents for a seamless property search experience."</p>
 				</div>
 			</div>
 
-			<div class="project-group col-12 col-md-5 col-lg-4 col-xl-3">
+			<div class="project-group col-12 col-md-5 col-lg-4 col-xl-3 mb-4">
 				<div class="card border-0" >
 					<img src="images/project-4.png" class="card-img-top" alt="...">
 					<div class="card-body">
 						<h5 class="card-title text-dark text-center">Online Grocery App</h5>
 					</div>
 				</div>
-				<div class="project-description px-2 pt-3">
+				<div class="project-description px-2 pt-2">
 					<p class="text-center">Shop conveniently with this Online Grocery App. Browse a wide selection of products, create personalized shopping lists, and have your groceries delivered right to your doorstep. Enjoy a hassle-free shopping experience from the comfort of your home.</p>
 				</div>
 			</div>
