add vertical padding to back-to-top button, reduce vertical padding to footer, edit footer text

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 			</div>
 
 			<!-- BACK TO TOP BUTTON -->				
-			<div id="back-to-top" class="col-12 mx-auto text-center">
+			<div id="back-to-top" class="col-12 mx-auto my-5 text-center">
 				<a href="#top-anchor"><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16">
 					<path d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z"/>
 				</svg><p class="mt-2">Back to Top</p>
@@ -227,9 +227,9 @@
 
 	</div>
 	<!-- Footer section -->
-	<footer class="bg-dark py-5">
+	<footer class="bg-dark py-3">
 		<div class=" ">
-			<p class="text-md-center m-0"><span class="px-3 d-block d-md-inline">Capstone 1 - Developer Portfolio</span> <span class="px-3">Zuitt Coding Bootcamp <span class="px-2">©</span> 2023</span></p>
+			<p class="text-md-center m-0"><span class="px-3 d-block d-md-inline">Capstone 1 - Developer Portfolio</span><span class="d-none d-md-inline">|</span><span class="px-3">Zuitt Coding Bootcamp <span class="px-2">©</span> 2023</span></p>
 			<p class="text-md-center px-3 mt-3">All projects are fictitious and for educational purposes only.</p>
 		</div>
 	</footer>
