edit footer style

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@900&display=swap" rel="stylesheet">
-	
+
 	<link href="https://fonts.googleapis.com/css2?family=Reem+Kufi+Fun:wght@400;600&display=swap" rel="stylesheet">
 
 	<link href="https://fonts.googleapis.com/css2?family=Reem+Kufi:wght@400;700&display=swap" rel="stylesheet">
@@ -228,9 +228,9 @@
 	</div>
 	<!-- Footer section -->
 	<footer class="bg-dark py-3">
-		<div class=" ">
-			<p class="text-md-center m-0"><span class="px-3 d-block d-md-inline">Capstone 1 - Developer Portfolio</span><span class="d-none d-md-inline">|</span><span class="px-3">Zuitt Coding Bootcamp <span class="px-2">©</span> 2023</span></p>
-			<p class="text-md-center px-3 mt-3">All projects are fictitious and for educational purposes only.</p>
+		<div class="text-center">
+			<p class="m-0"><span class="d-block d-md-inline">Capstone 1 - Developer Portfolio</span><span class="d-none d-md-inline px-3">|</span><span class="d-block mt-3 d-md-inline ">Zuitt Coding Bootcamp © 2023</span></p>
+			<p class="px-3 mt-3">All projects are fictitious and for educational purposes only.</p>
 		</div>
 	</footer>
 	<!-- Footer section -->
